--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-   "name": "typeorm-sample",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
+   "name": "mail_server",
+   "version": "1.0.1",
+   "description": "Mail Server developed with node, express, typescript and TypeORM with postgress",
    "type": "commonjs",
    "devDependencies": {
       "@types/node": "^16.11.10",
@@ -24,7 +24,12 @@
       "typeorm": "0.3.20"
    },
    "scripts": {
+      "watch": "tsc -w",
+      "dev": "nodemon build/index.js",
+      "start:dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
+      "build": "tsc",
       "start": "ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "migration": " npm run typeorm migration:run -- -d ./src/data-source.ts"
    }
 }
