--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "express": "^4.18.2",
       "jsonwebtoken": "^9.0.2",
       "memory-cache": "^0.2.0",
+      "nodemon": "^3.0.3",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.20"
