added user functionality for register and auth

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
       "build": "tsc",
       "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
-      "migration": " npm run typeorm migration:run -- -d ./src/data-source.ts"
+      "migration": " npm run typeorm migration:run -- -d ./src/database-connection.ts"
    }
 }
